Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -523,7 +523,7 @@ book. We decided prefix all output lines with
 \texttt{\#OUT\textgreater{}} to make the distinction. Notice that you
 can simply copy and paste the code into your \texttt{R} console.
 
-\subsection{\texorpdfstring{\texttt{ScPoEconometrics}
+\section{\texorpdfstring{\texttt{ScPoEconometrics}
 Package}{ScPoEconometrics Package}}\label{install-package}
 
 To fully take advantage of our course, please install the associated
@@ -2534,8 +2534,8 @@ and a standard deviation of \texttt{5}.
 \end{Shaded}
 
 \begin{verbatim}
-#OUT>  [1]   9.1408522  -3.0961893   0.9150544 -11.4084768  -3.2864593
-#OUT>  [6]  -3.9139924  -0.9554791   5.2968748   3.2040833  10.7166067
+#OUT>  [1]   0.4262361 -13.4354239  -4.2331823  -8.1466823   2.0228919
+#OUT>  [6]   0.2849765   5.1995505  -2.5640318  -0.3274878  -0.8956712
 \end{verbatim}
 
 \begin{Shaded}
@@ -2545,8 +2545,8 @@ and a standard deviation of \texttt{5}.
 \end{Shaded}
 
 \begin{verbatim}
-#OUT>  [1]  1.2719967 -0.5636490  0.0380669 -1.8105529 -0.5921909 -0.6863254
-#OUT>  [7] -0.2425268  0.6953720  0.3814380  1.5083714
+#OUT>  [1]  0.48552825 -2.10989017 -0.38688820 -1.11964100  0.78448163
+#OUT>  [6]  0.45907921  1.37927029 -0.07436114  0.34440310  0.23801803
 \end{verbatim}
 
 This function could be written much more succinctly, simply performing
@@ -2670,7 +2670,7 @@ maximum likelihood) which we will call \(\hat{\sigma}^2\).
 \end{Shaded}
 
 \begin{verbatim}
-#OUT> [1] 44.44011
+#OUT> [1] 28.52435
 \end{verbatim}
 
 \begin{Shaded}
@@ -2680,7 +2680,7 @@ maximum likelihood) which we will call \(\hat{\sigma}^2\).
 \end{Shaded}
 
 \begin{verbatim}
-#OUT> [1] 44.44011
+#OUT> [1] 28.52435
 \end{verbatim}
 
 \begin{Shaded}
@@ -2690,7 +2690,7 @@ maximum likelihood) which we will call \(\hat{\sigma}^2\).
 \end{Shaded}
 
 \begin{verbatim}
-#OUT> [1] 44.44011
+#OUT> [1] 28.52435
 \end{verbatim}
 
 We see the function is working as expected, and when returning the
@@ -2705,7 +2705,7 @@ unbiased estimate it matches \texttt{R}'s built in function
 \end{Shaded}
 
 \begin{verbatim}
-#OUT> [1] 39.9961
+#OUT> [1] 25.67191
 \end{verbatim}
 
 \chapter{Working With Data}\label{sum}
