--- a/packages.bib
+++ b/packages.bib
@@ -16,9 +16,9 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
+  note = {R package version 0.7.12},
+  url = {https://github.com/rstudio/bookdown},
   year = {2018},
-  note = {R package version 0.7},
-  url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
@@ -27,11 +27,25 @@
   note = {R package version 0.7.4},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+@Manual{R-Ecdat,
+  title = {Ecdat: Data Sets for Econometrics},
+  author = {Yves Croissant},
+  year = {2016},
+  note = {R package version 0.3-1},
+  url = {https://CRAN.R-project.org/package=Ecdat},
+}
+@Manual{R-Ecfun,
+  title = {Ecfun: Functions for Ecdat},
+  author = {Spencer Graves},
+  year = {2016},
+  note = {R package version 0.1-7},
+  url = {https://CRAN.R-project.org/package=Ecfun},
+}
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang},
-  year = {2016},
-  note = {R package version 2.2.1},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
+  year = {2018},
+  note = {R package version 3.0.0},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-knitr,
@@ -41,6 +55,20 @@
   note = {R package version 1.20},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+@Manual{R-mvtnorm,
+  title = {mvtnorm: Multivariate Normal and t Distributions},
+  author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Torsten Hothorn},
+  year = {2018},
+  note = {R package version 1.0-8},
+  url = {https://CRAN.R-project.org/package=mvtnorm},
+}
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via 'plotly.js'},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2017},
+  note = {R package version 4.7.1},
+  url = {https://CRAN.R-project.org/package=plotly},
+}
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
@@ -48,11 +76,25 @@
   note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
+@Manual{R-readxl,
+  title = {readxl: Read Excel Files},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2018},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=readxl},
+}
+@Manual{R-reshape2,
+  title = {reshape2: Flexibly Reshape Data: A Reboot of the Reshape Package},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.4.3},
+  url = {https://CRAN.R-project.org/package=reshape2},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
-  year = {2017},
-  note = {R package version 1.8},
+  year = {2018},
+  note = {R package version 1.9},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 @Manual{R-tibble,
@@ -61,4 +103,11 @@
   year = {2018},
   note = {R package version 1.4.2},
   url = {https://CRAN.R-project.org/package=tibble},
+}
+@Manual{R-tidyr,
+  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2018},
+  note = {R package version 0.8.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
 }
